# orange-translator

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.jules/: bolt.md
app/cli/: main.py
app/web/: app.py
app/web/frontend/: package-lock.json  vite.config.ts
app/web/frontend/src/: App.vue
app/web/frontend/src/assets/: main.css
app/web/frontend/src/components/: TranslatorPanel.vue
app/web/routers/: translate.py
core/: config.py  pipeline.py
core/epub/: extractor.py  packer.py  parser.py
core/translator/: base.py  ollama.py  openai_compat.py
