[project]
name = "orange-translator"
version = "0.1.0"
description = "EPUB bilingual translation tool powered by LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi>=0.132.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "python-multipart>=0.0.22",
    "rich>=14.3.3",
    "sse-starlette>=3.2.0",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
ot = "app.cli.main:app"

[tool.setuptools.packages.find]
include = ["core*", "app*"]
exclude = ["app/web/frontend*"]
